# ocaml-rest-server

./: Makefile  README.md  rest_server.opam
lib/: api.ml  api.mli  http_json.ml  http_json.mli  jbuild  json_schema.ml  rest_path.ml  rest_path.mli  rest_server.ml  rest_server.mli  swagger.atd
release/rest_server.0.0.2/: opam  url
release/rest_server.0.0.3/: url
release/rest_server.0.0.4/: descr  opam  url
