version: "0.0.1"
opam-version: "1.2"
maintainer: "Vasil Dyadov <vasil.s.d@gmail.com>"
authors: [ "Vasil Daydov <vasil.s.d@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/vasil-sd/ocaml-rest-server"
bug-reports: "https://github.com/vasil-sd/ocaml-rest-server/issues"
dev-repo: "https://github.com/vasil-sd/ocaml-rest-server.git"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "result"
  "httpaf" {>= "0.4.1"}
  "httpaf-async" {>= "0.4.1"}
  "async" {>= "v0.9.0"}
  "core" {>= "v0.9"}
  "yojson" {>= "1.4.1"}
]
available: [ ocaml-version >= "4.03.0" ]
